# portal

./: .gitignore
VS/: .env.example  .replit  FWADPTE.py  Run_Project.bat  TestwithSeverity.py  admin.html  admin_login.html  app.py  app_legacy_backup.py  config.py  convert.html  convert_firewall.html  convert_router.html  cookies.txt  database.py  index.html  insert_data.py  lookup_firewall.html  lookup_router.html  main_page.html  manage_firewall_vulnerabilities.html  manage_groups.html  manage_router_vulnerabilities.html  manage_users.html  manage_vulnerabilities.html  manualRev.py  manual_review.html  migrate_passwords.py  new_app.py  pending_vulnerabilities.db  pyproject.toml  replit.md  requirements.txt  review_summary.html  setup_db.py  setup_mysql.py  setup_mysql_fixed.py  setup_rbac.py  setup_rbac_mysql.py  setup_rbac_pg.py  (+4 more)
VS/app/: __init__.py  config.py  views_backup.py
VS/app/api/: __init__.py  admin.py  auth.py  files.py  review.py  vulnerabilities.py
VS/app/models/: __init__.py  group.py  review.py  user.py  vulnerability.py
VS/app/routes/: __init__.py  (+3 more)
VS/routes/: admin_routes.py  auth_routes.py  main_routes.py
VS/static/: style.css
VS/templates/: admin.html  admin_login.html  convert.html  convert_firewall.html  convert_router.html  error.html  export_findings.html  index.html  lookup_firewall.html  lookup_router.html  main_page.html  manage_firewall_vulnerabilities.html  manage_groups.html  manage_permissions.html  manage_router_vulnerabilities.html  manage_users.html  manual_review.html  manual_review_navigation.html  user_login.html
(+13 files in other folders)
