[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-wtf>=1.2.2",
    "flask>=3.1.2",
    "mysql-connector-python>=9.4.0",
    "psycopg2-binary>=2.9.10",
    "pymupdf>=1.26.4",
    "pypdf>=6.0.0",
    "python-docx>=1.2.0",
    "werkzeug>=3.1.3",
    "flask-jwt-extended>=4.7.1",
    "flask-cors>=6.0.1",
    "marshmallow>=4.0.1",
    "flask-marshmallow>=1.3.0",
    "docx>=0.2.4",
    "alembic>=1.16.5",
    "marshmallow-sqlalchemy>=1.4.2",
    "sqlalchemy>=2.0.43",
    "pymysql>=1.1.2",
    "cryptography>=46.0.1",
    "fitz>=0.0.1.dev2",
    "flask-sqlalchemy>=3.1.1",
]
